# staked

./: .gitignore  Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
skill/: SKILL.md
src/: checker.rs  lib.rs  main.rs  mcp.rs  registry.rs
